--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mahammad Sheykhov — CV & Portfolio
-baseurl: "/site1101"
+baseurl: ""
 url: "https://Deeeeniz.github.io"
 markdown: kramdown
 exclude:
